--- a/src/main/resources/edu/ncku/todo/ui/mainView.fxml
+++ b/src/main/resources/edu/ncku/todo/ui/mainView.fxml
@@ -30,12 +30,11 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
-                  <Button fx:id="mainViewModButton" layoutX="10.0" layoutY="13.0" mnemonicParsing="false" onAction="#switchToModify" onDragEntered="#handleHover" onDragExited="#handleExit" onMouseEntered="#handleHover" onMouseExited="#handleExit" onMousePressed="#handlePress" style="-fx-background-color: #7190de;" text="%ui.setting">
+                  <Button fx:id="mainViewModButton" layoutX="10.0" layoutY="13.0" mnemonicParsing="false" onDragEntered="#handleHover" onDragExited="#handleExit" onMouseEntered="#handleHover" onMouseExited="#handleExit" onMousePressed="#handlePress" style="-fx-background-color: #7190de;" text="%ui.setting">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
-                  <Region prefHeight="29.0" prefWidth="522.0" />
                </items>
             </ToolBar>
          </top>
@@ -88,10 +87,10 @@
                               </HBox>
                            </center>
                            <top>
-                              <Region prefHeight="15.0" prefWidth="49.0" BorderPane.alignment="CENTER" />
+                              <Region prefHeight="8.0" prefWidth="49.0" BorderPane.alignment="CENTER" />
                            </top>
                            <bottom>
-                              <Region prefHeight="8.0" prefWidth="49.0" BorderPane.alignment="CENTER" />
+                              <Region prefHeight="4.0" prefWidth="49.0" BorderPane.alignment="CENTER" />
                            </bottom>
                         </BorderPane>
                         <HBox alignment="CENTER" prefHeight="45.0" prefWidth="483.0" spacing="16.0">
@@ -157,7 +156,6 @@
                               <Insets />
                            </opaqueInsets>
                         </HBox>
-                        <Region prefHeight="10.0" />
                         <FlowPane fx:id="calendarPane" alignment="TOP_CENTER" hgap="5.0" prefHeight="400.0" prefWidth="483.0" vgap="5.0" />
                      </children>
                   </VBox>
