--- a/src/main/resources/edu/ncku/todo/ui/category.fxml
+++ b/src/main/resources/edu/ncku/todo/ui/category.fxml
@@ -5,20 +5,22 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="479.0" prefWidth="337.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="479.0" prefWidth="337.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ncku.todo.ui.CategoryController">
    <children>
-      <TableView prefHeight="180.0" prefWidth="325.0" style="-fx-background-color: #b4caed;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <TableView fx:id="categoryTable" prefHeight="180.0" prefWidth="325.0" style="-fx-background-color: #b4caed;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <columns>
-            <TableColumn editable="false" prefWidth="75.0" sortable="false"
+            <TableColumn fx:id="taskNameColumn" reorderable="false" editable="false" maxWidth="137.0" minWidth="137.0"
+               prefWidth="137.0" resizable="false" sortable="false"
                style="-fx-background-color: ccd8eb;" text="%ui.taskName" />
-            <TableColumn editable="false" prefWidth="185.0" sortable="false"
-               style="-fx-background-color: #ccd8eb;" text="%ui.taskdueDate" />
-            <TableColumn editable="false" prefWidth="75.0" sortable="false"
-               style="-fx-background-color: #ccd8eb;" text="%ui.taskStatus" />
+            <TableColumn fx:id="taskDueDateColumn" reorderable="false" editable="false" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" resizable="false" sortable="false" style="-fx-background-color: #ccd8eb;" text="%ui.taskdueDate" />
+            <TableColumn fx:id="taskStatusColumn" reorderable="false" editable="false" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" resizable="false" sortable="false" style="-fx-background-color: #ccd8eb;" text="%ui.taskStatus" />
          </columns>
          <opaqueInsets>
             <Insets />
          </opaqueInsets>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
       </TableView>
    </children>
 </AnchorPane>
